# MCTS-checkers

./: .gitignore  CMakeLists.txt  README.md  build_me.sh  format_all.sh  structure.txt
dependencies/: CMakeLists.txt
dependencies/googletest/: CMakeLists.txt
games/: game_history_2026-01-24_21-33-15.txt  game_history_2026-01-25_11-25-51.txt  game_history_2026-01-25_12-43-32.txt  game_history_2026-01-25_16-05-17.txt  game_history_2026-01-28_19-44-03.txt  game_history_2026-01-28_19-46-38.txt  game_history_2026-01-28_19-50-02.txt
project/: CMakeLists.txt  main.cpp  main.cu
project/include/cpu/: checkers_engine.h  constants.h  cpu_movegen.h  game_engine.h  lookup_tables.h  mcts_tree.h  move.h
project/include/cuda/: bit_operations.h  board_infra.cuh
project/include/cuda_utils/: memory_cuda.cuh
project/include/general/: board_infra.cuh  board_infra.h  checkers_engine.h  common.cuh  constants.h  cpu_movegen.h  cpu_simulation.h  game_engine.h  game_simulation.cuh  gpu_board.cuh  gpu_infa_kernels.cuh  gpu_movegen.cuh  lookup_tables.h  mcts.h  mcts_engine.cuh  mcts_tree.h  move.h  simulation.h
project/include/gpu/: common.cuh  game_engine.cuh  gpu_board.cuh  gpu_checkers_engine.cuh  gpu_infa_kernels.cuh  gpu_move.cuh  gpu_movegen.cuh  gpu_rollout.cuh
project/include/utils/: bit_operations.cuh  bit_operations.h  logger.h  logger_util.h
project/src/cpu/: checkers_engine.cpp  cpu_dummy.cpp  cpu_movegen.cpp  game_engine.cpp  mcts_tree.cpp  simulation.cpp
project/src/cuda/: cuda_dummy.cu  game_engine.cu  gpu_checkers_engine.cu  gpu_infra_kernels.cu  gpu_movegen.cu  gpu_rollout.cu  mcts_engine.cu
tests/: CMakeLists.txt  apply_move_test.cpp  borad_print_test.cpp  borad_print_test.cu  cpu_kings_movegen_test.cpp  cpu_movegen_test.cpp  cpu_pawns_movegen_test.cpp  cpu_pawns_movegen_test.cu  example.cu  game_test_white.cpp  gpu_king_movegen_test.cu  gpu_pawn_movegen_test.cu  gpu_tests.cu  gpu_vs_cpu_test.cu  mctr_tree_management_test.cpp  mctr_tree_management_test.cu  move_parsing_test.cpp  move_parsing_test.cu  moveprint_tests.cpp  moves_matching_test.cpp  path_structures_test.cpp
