message(STATUS "Loading tests target...")

# ------------------------------------------------------------------------------ #
#                              Load sources                                      #
# ------------------------------------------------------------------------------ #

file(GLOB TEST_SOURCES
        "${CMAKE_CURRENT_SOURCE_DIR}/*.cu"
        "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
)

# ------------------------------------------------------------------------------ #
#                               Define exec                                      #
# ------------------------------------------------------------------------------ #

add_executable(${TEST} ${TEST_SOURCES})

# ------------------------------------------------------------------------------ #
#                                   Link                                         #
# ------------------------------------------------------------------------------ #

target_link_libraries(${TEST} PRIVATE
        ${CUDA_LIB}
        GTest::gtest_main
)

include(GoogleTest)